test/conformance/chainsaw/generate/clusterpolicy/standard/generated-resource-provenance/genuine-target.yaml
apiVersion: v1
kind: Secret
metadata:
  name: synchronized
  namespace: generated-resource-provenance-genuine
  annotations:
    (starts_with("generate.kyverno.io/provenance" || '', 'v1:')): true
data:
  value: c291cmNl
