test/conformance/chainsaw/generate/clusterpolicy/standard/generated-resource-provenance/source-restored.yaml
apiVersion: v1
kind: Secret
metadata:
  name: source
  namespace: generated-resource-provenance-source
  labels:
    generate.kyverno.io/clone-source: ""
data:
  value: c291cmNl
