test/conformance/chainsaw/generate/clusterpolicy/standard/generated-resource-provenance/stamp-update.yaml
apiVersion: v1
kind: Secret
metadata:
  name: existing
  namespace: generated-resource-provenance-tenant
  annotations:
    generate.kyverno.io/provenance: v1:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
data:
  value: dW5jaGFuZ2Vk
