test/conformance/chainsaw/generate/clusterpolicy/standard/generated-resource-provenance/target.yaml
apiVersion: v1
kind: Secret
metadata:
  name: synchronized
  namespace: generated-resource-provenance-tenant
